// 20211217: Wireframe https://wireframe.cc/ag82hc

import { render, screen, fireEvent } from '@testing-library/react';
import renderer from 'react-test-renderer';
import userEvent from '@testing-library/user-event';

import ShippingInfo from '../../components/shipping/ShippingInfo';

describe('<ShippingInfo /> component tests', () => {
    beforeEach(() => render(<ShippingInfo />));

    it('should render', () => {
        screen.getByRole('presentation', {name: /shipping-info/i});
    })
    it('should render and display a first name', () => {
        const theElement = screen.getByRole('textbox', {name: /first-name/i});
        userEvent.type(theElement, 'first-name');
        
        expect(theElement).toHaveValue('first-name');
    });
    it('should render and display last name', () => {
        const theElement = screen.getByRole('textbox', {name: /last-name/i});
        userEvent.type(theElement, 'last-name');
        
        expect(theElement).toHaveValue('last-name');
    });
    it('should render and display address 1', () => {
        const theElement = screen.getByRole('textbox', {name: /address-1/i});
        userEvent.type(theElement, 'address-1');
        
        expect(theElement).toHaveValue('address-1');
    });
    it('should render and display address 2', () => {
        const theElement = screen.getByRole('textbox', {name: /address-2/i});
        userEvent.type(theElement, 'address-2');
        
        expect(theElement).toHaveValue('address-2');
    });
    it('should render and display city', () => {
        const theElement = screen.getByRole('textbox', {name: /city/i});
        userEvent.type(theElement, 'city');
        
        expect(theElement).toHaveValue('city');
    });
    it('should render and display state / province', () => {
        const theElement = screen.getByRole('textbox', {name: /state-province/i});
        userEvent.type(theElement, 'state-province');
        
        expect(theElement).toHaveValue('state-province');
    });
    it('should rendeer and display postal code', () => {
        const theElement = screen.getByRole('textbox', {name: /postal-code/i});
        userEvent.type(theElement, 'postal-code');
        
        expect(theElement).toHaveValue('postal-code');
    });
    it('should render and display country', () => {
        const theElement = screen.getByRole('textbox', {name: /country/i});
        userEvent.type(theElement, 'country');
        
        expect(theElement).toHaveValue('country');
    });
    it('should render and click a go-to-payment-info button', () => {
        const theVal = screen.getByRole('button', {name: /go-to-payment-info/i});
        fireEvent.click(theVal);
    });

    it('creates a snapshot', () => {
        const tree = renderer.create(<ShippingInfo />).toJSON();
        expect(tree).toMatchSnapshot();  
    });
});

